tests/ui/loop-match/const-continue-to-block.stderr
error: `#[const_continue]` must break to a labeled block that participates in a `#[loop_match]`
  --> $DIR/const-continue-to-block.rs:20:27
   |
LL |                     break 'b 2;
   |                           ^^

error: aborting due to 1 previous error

